<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearClickable"
                android:layout_width="0dp"
                android:layout_height="@dimen/minHeight"
                android:layout_marginHorizontal="@dimen/measure4"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/txtClickable"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/minHeight"
                    android:text="@string/text_to_simulate_a_button_inside_linearlayout"
                    android:textAlignment="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:paddingHorizontal="@dimen/measure1"
                    android:src="@drawable/baseline_info_24" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintClickable"
                android:layout_width="0dp"
                android:layout_height="@dimen/minHeight"
                android:layout_marginHorizontal="@dimen/measure4"
                android:layout_marginTop="@dimen/measure2"
                android:background="@android:color/holo_blue_light"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearClickable">

                <TextView
                    android:id="@+id/tvConstraintClickable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/minHeight"
                    android:text="@string/text_to_simulate_a_button_inside_constraint"
                    android:textAlignment="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/ivConstraintClickable"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivConstraintClickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/baseline_lock_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tvConstraintClickable"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtClickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/measure4"
                android:layout_marginTop="@dimen/measure2"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:minHeight="@dimen/minHeight"
                android:text="@string/my_text_button"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintClickable" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure2"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/go_to_settings_button"
                android:textAllCaps="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtClickable" />

            <ImageButton
                android:id="@+id/imgUnlabelledButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure2"
                android:src="@drawable/baseline_settings_48"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <ImageButton
                android:id="@+id/imgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure2"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/settings_button"
                android:padding="@dimen/measure1"
                android:src="@drawable/baseline_settings_48"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUnlabelledButton" />

            <Button
                android:id="@+id/btnWithImageStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure2"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/text_and_image_button"
                app:icon="@drawable/baseline_info_24"
                app:iconGravity="textStart"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgButton" />

            <Button
                android:id="@+id/btnWithImageTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure2"
                android:backgroundTint="@android:color/holo_blue_light"
                android:drawableTop="@drawable/baseline_thumb_up_24"
                android:text="@string/text_and_image_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnWithImageStart" />

            <Button
                android:id="@+id/btnWithImageEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure2"
                android:backgroundTint="@android:color/holo_blue_light"
                android:drawableTint="@color/purple_200"
                android:text="@string/text_and_image_button"
                app:icon="@drawable/baseline_lock_24"
                app:iconGravity="textEnd"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnWithImageTop" />

            <Button
                android:id="@+id/btnWithImageBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure2"
                android:backgroundTint="@android:color/holo_blue_light"
                android:drawableBottom="@drawable/baseline_search_24"
                android:text="@string/text_and_image_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnWithImageEnd" />
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>